--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
   - "3.8"
 
 install:
-  - pip install -r requirements.txt
+  - pip install --upgrade pip
+  - pip install poetry
+  - poetry install
 
 script:
-  - flake8 ./scrapy_workua
+  - poetry run flake8 ./scrapy_workua
