--- a/scrapy_workua/pyproject.toml
+++ b/scrapy_workua/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Sergiy Naumov <1414sergiy@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+Scrapy = "^2.4.1"
+flake8 = "^3.8.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
